Fix tab alignment

--- a/res/style.scss
+++ b/res/style.scss
@@ -3,7 +3,7 @@
 #alientube {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     margin-top: 30px;
-    padding: 20px 20px 40px 20px;
+    padding-bottom: 20px;
     width: 100%;
     box-sizing: border-box;
     background: #fff;
@@ -170,9 +170,15 @@
 
 #at_tabcontainer {
     padding-right: 20px;
+    margin-left: 4px;
     position: relative;
     display: flex;
     flex-direction: row;
+}
+
+#at_comments {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 @-moz-document url-prefix() {
